Fixed help popup on mobile

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ video {
     width: 90px;
     height: 50px;
     font-size: 1.3rem;
+    margin: auto;
 }
 
 /* Grid styling */
@@ -138,16 +139,6 @@ video {
 
 .dead {
     background-color: whitesmoke;
-}
-
-@keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
 }
 
 @media (max-width: 780px) {
@@ -216,5 +207,24 @@ video {
         height: 20px;
         padding: 3px 6px;
         border-radius: 4px;
+    }
+
+    #help-popup {
+        font-size: 1rem;
+    }
+
+    video {
+        height: 20%;
+        width: 90%;
+    }
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
     }
 }
